force-app/main/default/objects/Growth_Rate_Report_Obj__c/Growth_Rate_Report_Obj__c.object-meta.xml
<CustomObject>
    <label>Growth_Rate_Report_Obj</label>
    <nameField>
        <label>Growth_Rate_Report_Obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Growth_Rate_Report_Obj</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>