force-app/main/default/objects/Growth_Rate_Report_Obj__c/fields/Accumulated_Revenue_Gross_Same_Period__c.field-meta.xml
<CustomField>
    <fullName>Accumulated_Revenue_Gross_Same_Period__c</fullName>
    <label>Accumulated Revenue(Y.O.Y)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>