force-app/main/default/objects/Growth_Rate_Report_Obj__c/fields/Accumulated_Revenue_Gross_USD__c.field-meta.xml
<CustomField>
    <fullName>Accumulated_Revenue_Gross_USD__c</fullName>
    <label>Accumulated Revenue(Gross USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>