force-app/main/default/objects/Growth_Rate_Report_Obj__c/fields/Accumulated_sales_volumn__c.field-meta.xml
<CustomField>
    <fullName>Accumulated_sales_volumn__c</fullName>
    <label>Accumulated Sales Volumn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>