force-app/main/default/objects/Growth_Rate_Report_Obj__c/fields/Actual_Revenue_Net__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue_Net__c</fullName>
    <label>Actual Revenue(Net)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>