force-app/main/default/objects/Growth_Rate_Report_Obj__c/fields/Actual_Revenue_Same_Period_Net_USD__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue_Same_Period_Net_USD__c</fullName>
    <label>Actual Revenue(Y.O.Y Net USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>