force-app/main/default/objects/Growth_Rate_Report_Obj__c/fields/Management_Customer__c.field-meta.xml
<CustomField>
    <fullName>Management_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Growth_Rate_Report_Obj</relationshipLabel>
    <relationshipName>Growth_Rate_Report_Obj</relationshipName>
    <type>Lookup</type>
</CustomField>