force-app/main/default/objects/Growth_Rate_Report_Obj__c/fields/sales_volumn_Same_Period__c.field-meta.xml
<CustomField>
    <fullName>sales_volumn_Same_Period__c</fullName>
    <description>sales_volumn_Same_Period</description>
    <label>Sales Volumn(Y.O.Y)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>