force-app/main/default/objects/Growth_Rate_Report_Obj__c/fields/Yearly_Growth_Rate_YtD_Net__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Growth_Rate_YtD_Net__c</fullName>
    <formula>IF(AND(Accumulated_Revenue_Net_Same_Period__c=0,Accumulated_Revenue_Net__c=0),null,IF(Accumulated_Revenue_Net_Same_Period__c=0, 1, (Accumulated_Revenue_Net__c-Accumulated_Revenue_Net_Same_Period__c)/ABS(Accumulated_Revenue_Net_Same_Period__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Growth Rate(YtD Net)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>